fix footer contrast color

--- a/website/components/footer/style.css
+++ b/website/components/footer/style.css
@@ -10,14 +10,12 @@
   }
 
   & a {
-    color: black;
-    opacity: 0.5;
-    transition: opacity 0.25s ease;
+    color: var(--gray-3);
     cursor: pointer;
     display: inline-block;
 
     &:hover {
-      opacity: 1;
+      color: black;
     }
   }
 
